        on Mac preventing v1.7.2 availability for Mac (only).

USER VISIBLE CHANGES

    o   := now has its own help page in addition to the examples in ?data.table,
        see help(":=").
        
    o   The error message from X[Y] when X is unkeyed has been lengthened to
        including advice to call setkey first and see ?setkey. Thanks to a
        comment by ilprincipe on Stack Overflow.
    

        *********************************************
        **                                         **
        **   CHANGES IN DATA.TABLE VERSION 1.7.2   **
        **                                         **
        *********************************************

NEW FEATURES

    o   unique and duplicated methods now work on unkeyed tables (comparing
        all columns in that case) and both now respect machine tolerance for
        double precision columns, implementing FR#1626 and fixing bug #1632.
        Their help page has been updated accordingly with detailed examples.
        Thanks to questions by Iterator and comments by Allan Engelhardt on
        Stack Overflow.
        
    o   A new method as.data.table.list has been added, since passing a (pure)
        list to data.table() now creates a single list column.
    

BUG FIXES

    o   Assigning to a column variable using <- or = in j now
        works (creating a local copy within j), rather than
        persisting from group to group and sometimes causing a crash.
        Non column variables still persist from group to group; e.g.,
        a group counter. This fixes the remainder of #1624 thanks to
        Steve Lianoglou for reporting.
        
    o   A crash bug is fixed when j returns a (strictly) NULL column next
        to a non-empty column, #1633. This case was anticipated and coded
        for but an errant LENGTH() should have been length(). Thanks
        to Dennis Murphy for reporting.
        
    o   The first column of data.table() can now be a list column, fixing